--- a/Kama.Bonyad.Evaluation.WebApp/app/package.json
+++ b/Kama.Bonyad.Evaluation.WebApp/app/package.json
@@ -8,49 +8,50 @@
   },
   "author": "Kama",
   "dependencies": {
-    "@simonwep/pickr": "^1.4.2",
-    "angular": "^1.7.5",
-    "angular-animate": "^1.7.5",
-    "angular-route": "^1.7.5",
-    "angular-sanitize": "^1.7.5",
-    "angular-smart-table": "^2.1.8",
-    "bootstrap": "^3.4.1",
-    "font-awesome": "^4.7.0",
-    "highcharts": "^6.2.0",
-    "jquery": "^3.4.1",
-    "jquery-ui": "^1.12.1",
-    "jquery-ui-dist": "^1.12.1",
+    "angular": "1.8.2",
+    "angular-animate": "1.8.2",
+    "angular-clockpicker": "^1.1.1",
+    "angular-route": "1.8.2",
+    "angular-sanitize": "1.8.2",
+    "angular-smart-table": "2.1.8",
+    "bootstrap": "3.3.7",
+    "font-awesome": "4.7.0",
+    "highcharts": "6.1.0",
+    "jquery": "3.2.1",
+    "jquery-ui": "1.12.1",
+    "jquery-ui-dist": "1.12.1",
     "kama-angularjs-module": "^0.9.68",
     "kama-ckeditor": "^1.0.0",
     "kama-lvl-drag-drop": "^1.0.0",
-    "kamadatepicker": "^1.4.7",
-    "ngstorage": "^0.3.11",
-    "select2": "^4.0.6-rc.1",
+    "kamadatepicker": "^1.5.1",
+    "ngstorage": "0.3.11",
+    "select2": "4.0.6-rc.1",
     "select2-bootstrap-theme": "0.1.0-beta.10",
-    "tree-grid-directive": "^0.4.1"
+    "tree-grid-directive": "0.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
     "babel-core": "6.26.3",
     "babel-loader": "8.0.4",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^3.2.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "ngtemplate-loader": "^2.0.1",
+    "babel-preset-es2015": "6.24.1",
+    "copy-webpack-plugin": "4.5.2",
+    "css-loader": "0.28.7",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.5",
+    "html-loader": "0.5.5",
+    "html-webpack-plugin": "3.2.0",
+    "ngtemplate-loader": "2.0.1",
     "node-sass": "^4.14.1",
-    "postcss-loader": "^2.1.6",
-    "resolve-url-loader": "^2.3.1",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
-    "webpack-version-file-plugin": "^0.3.3"
+    "postcss-loader": "2.1.5",
+    "resolve-url-loader": "2.3.0",
+    "sass-loader": "6.0.6",
+    "style-loader": "0.19.0",
+    "uglifyjs-webpack-plugin": "1.1.1",
+    "url-loader": "0.6.2",
+    "webpack": "3.8.1",
+    "webpack-cli": "^4.10.0",
+    "webpack-version-file-plugin": "0.3.3"
   }
 }
