--- a/Kama.Bonyad.Evaluation.WebApp/Kama.Mefa.Evaluation.WebApp.csproj
+++ b/Kama.Bonyad.Evaluation.WebApp/Kama.Mefa.Evaluation.WebApp.csproj
@@ -235,6 +235,7 @@
     <Compile Include="Controllers\prd\ProductController.cs" />
     <Compile Include="Controllers\prd\ProductClassificationController.cs" />
     <Compile Include="Controllers\Public\AttachmentController.cs" />
+    <Compile Include="Controllers\Public\BrandController.cs" />
     <Compile Include="Controllers\SmsSecurityStampController.cs" />
     <Compile Include="Controllers\Organization\DepartmentController.cs" />
     <Compile Include="Controllers\Organization\CommandController.cs" />
@@ -428,6 +429,13 @@
     <Content Include="app\dist\plugins\select2\select2.min.css" />
     <Content Include="app\dist\plugins\select2\select2.min.js" />
     <Content Include="app\dist\styles.css" />
+    <Content Include="app\pages\pbl\brand\directive\cartable\brand-cartable.directive.html" />
+    <Content Include="app\pages\pbl\brand\directive\cartable\brand.directive.js" />
+    <Content Include="app\pages\pbl\brand\directive\modify\brand-modify.directive.html" />
+    <Content Include="app\pages\pbl\brand\directive\modify\brand-modify.directive.js" />
+    <Content Include="app\pages\pbl\brand\brand.controller.js" />
+    <Content Include="app\pages\pbl\brand\brand.html" />
+    <Content Include="app\pages\pbl\brand\brand.service.js" />
     <Content Include="app\pages\prd\stock\directive\cartable\stock-cartable.directive.html" />
     <Content Include="app\pages\prd\stock\directive\cartable\stock-cartable.directive.js" />
     <Content Include="app\pages\prd\stock\directive\add\stock-add.directive.html" />
