--- a/Kama.Bonyad.Evaluation.WebApp/Kama.Mefa.Evaluation.WebApp.csproj
+++ b/Kama.Bonyad.Evaluation.WebApp/Kama.Mefa.Evaluation.WebApp.csproj
@@ -231,6 +231,7 @@
     <Compile Include="Controllers\Organization\RoleController.cs" />
     <Compile Include="Controllers\ApplicationController.cs" />
     <Compile Include="Controllers\prd\InformationController.cs" />
+    <Compile Include="Controllers\prd\ClassificationController.cs" />
     <Compile Include="Controllers\prd\TagController.cs" />
     <Compile Include="Controllers\prd\StockController.cs" />
     <Compile Include="Controllers\prd\ProductController.cs" />
@@ -437,6 +438,11 @@
     <Content Include="app\pages\pbl\brand\brand.controller.js" />
     <Content Include="app\pages\pbl\brand\brand.html" />
     <Content Include="app\pages\pbl\brand\brand.service.js" />
+    <Content Include="app\pages\prd\classification\classification.controller.js" />
+    <Content Include="app\pages\prd\classification\classification.html" />
+    <Content Include="app\pages\prd\classification\classification.service.js" />
+    <Content Include="app\pages\prd\classification\directive\modify2\classification-modify2.directive.html" />
+    <Content Include="app\pages\prd\classification\directive\modify2\classification-modify2.directive.js" />
     <Content Include="app\pages\prd\information\directive\add\information-add.directive.html" />
     <Content Include="app\pages\prd\information\directive\add\information-add.directive.js" />
     <Content Include="app\pages\prd\information\directive\cartable\information-cartable.directive.html" />
@@ -444,6 +450,10 @@
     <Content Include="app\pages\prd\information\information.controller.js" />
     <Content Include="app\pages\prd\information\information.html" />
     <Content Include="app\pages\prd\information\information.service.js" />
+    <Content Include="app\pages\prd\classification\directive\cartable\classification-cartable.directive.html" />
+    <Content Include="app\pages\prd\classification\directive\cartable\classification.directive.js" />
+    <Content Include="app\pages\prd\classification\directive\modify\classification-modify.directive.html" />
+    <Content Include="app\pages\prd\classification\directive\modify\classification-modify.directive.js" />
     <Content Include="app\pages\prd\stock\saleinperson\saleinperson.controller.js" />
     <Content Include="app\pages\prd\stock\saleinperson\saleinperson.html" />
     <Content Include="app\pages\prd\stock\main\directive\cartable\stock-cartable.directive.html" />
