--- a/Kama.Bonyad.Evaluation.WebApp/Kama.Mefa.Evaluation.WebApp.csproj
+++ b/Kama.Bonyad.Evaluation.WebApp/Kama.Mefa.Evaluation.WebApp.csproj
@@ -232,12 +232,12 @@
     <Compile Include="Controllers\ApplicationController.cs" />
     <Compile Include="Controllers\prd\InformationController.cs" />
     <Compile Include="Controllers\prd\ClassificationController.cs" />
-    <Compile Include="Controllers\prd\TagController.cs" />
+    <Compile Include="Controllers\pbl\TagController.cs" />
     <Compile Include="Controllers\prd\StockController.cs" />
-    <Compile Include="Controllers\prd\ProductController.cs" />
+    <Compile Include="Controllers\prd\ItemController.cs" />
     <Compile Include="Controllers\prd\ProductClassificationController.cs" />
-    <Compile Include="Controllers\Public\AttachmentController.cs" />
-    <Compile Include="Controllers\Public\BrandController.cs" />
+    <Compile Include="Controllers\pbl\AttachmentController.cs" />
+    <Compile Include="Controllers\pbl\BrandController.cs" />
     <Compile Include="Controllers\SmsSecurityStampController.cs" />
     <Compile Include="Controllers\Organization\DepartmentController.cs" />
     <Compile Include="Controllers\Organization\CommandController.cs" />
@@ -476,17 +476,17 @@
     <Content Include="app\pages\prd\stock\main\stock.controller.js" />
     <Content Include="app\pages\prd\stock\main\stock.html" />
     <Content Include="app\pages\prd\stock\stock.service.js" />
-    <Content Include="app\pages\prd\product\directive\information\product-information.directive.html" />
-    <Content Include="app\pages\prd\product\directive\information\product-information.directive.js" />
-    <Content Include="app\pages\prd\product\directive\Tag\product-tag.directive.html" />
-    <Content Include="app\pages\prd\product\directive\Tag\product-tag.directive.js" />
-    <Content Include="app\pages\prd\product\directive\cartable\product-cartable.directive.html" />
-    <Content Include="app\pages\prd\product\directive\cartable\product-cartable.directive.js" />
-    <Content Include="app\pages\prd\product\directive\modify\product-modify.directive.html" />
-    <Content Include="app\pages\prd\product\directive\modify\product-modify.directive.js" />
-    <Content Include="app\pages\prd\product\product.controller.js" />
-    <Content Include="app\pages\prd\product\product.html" />
-    <Content Include="app\pages\prd\product\product.service.js" />
+    <Content Include="app\pages\prd\item\directive\information\item-information.directive.html" />
+    <Content Include="app\pages\prd\item\directive\information\item-information.directive.js" />
+    <Content Include="app\pages\prd\item\directive\Tag\item-tag.directive.html" />
+    <Content Include="app\pages\prd\item\directive\Tag\item-tag.directive.js" />
+    <Content Include="app\pages\prd\item\directive\cartable\item-cartable.directive.html" />
+    <Content Include="app\pages\prd\item\directive\cartable\item-cartable.directive.js" />
+    <Content Include="app\pages\prd\item\directive\modify\item-modify.directive.html" />
+    <Content Include="app\pages\prd\item\directive\modify\item-modify.directive.js" />
+    <Content Include="app\pages\prd\item\item.controller.js" />
+    <Content Include="app\pages\prd\item\item.html" />
+    <Content Include="app\pages\prd\item\item.service.js" />
     <Content Include="app\pages\prd\product-classification\directive\cartable\product-classification-cartable.directive.html" />
     <Content Include="app\pages\prd\product-classification\directive\cartable\product-classification.directive.js" />
     <Content Include="app\pages\prd\product-classification\directive\modify\product-classification-modify.directive.html" />
