--- a/Kama.Bonyad.Evaluation.WebApp/Kama.Mefa.Evaluation.WebApp.csproj
+++ b/Kama.Bonyad.Evaluation.WebApp/Kama.Mefa.Evaluation.WebApp.csproj
@@ -230,6 +230,7 @@
     <Compile Include="Controllers\Organization\PositionHistoryController.cs" />
     <Compile Include="Controllers\Organization\RoleController.cs" />
     <Compile Include="Controllers\ApplicationController.cs" />
+    <Compile Include="Controllers\pbl\DepoController.cs" />
     <Compile Include="Controllers\prd\InformationController.cs" />
     <Compile Include="Controllers\prd\ClassificationController.cs" />
     <Compile Include="Controllers\pbl\TagController.cs" />
@@ -431,8 +432,17 @@
     <Content Include="app\dist\plugins\select2\select2.min.css" />
     <Content Include="app\dist\plugins\select2\select2.min.js" />
     <Content Include="app\dist\styles.css" />
+    <Content Include="app\pages\pbl\depo\depo.controller.js" />
+    <Content Include="app\pages\pbl\depo\depo.html" />
+    <Content Include="app\pages\pbl\depo\depo.service.js" />
+    <Content Include="app\pages\pbl\depo\directive\viwe\depo-viwe.directive.html" />
+    <Content Include="app\pages\pbl\depo\directive\viwe\depo-viwe.directive.js" />
+    <Content Include="app\pages\pbl\depo\directive\cartable\depo-cartable.directive.html" />
+    <Content Include="app\pages\pbl\depo\directive\cartable\depo-cartablse.directive.js" />
+    <Content Include="app\pages\pbl\depo\directive\add\depo-add.directive.html" />
+    <Content Include="app\pages\pbl\depo\directive\add\depo-add.directive.js" />
     <Content Include="app\pages\pbl\brand\directive\cartable\brand-cartable.directive.html" />
-    <Content Include="app\pages\pbl\brand\directive\cartable\brand.directive.js" />
+    <Content Include="app\pages\pbl\brand\directive\cartable\brand-cartable.directive.js" />
     <Content Include="app\pages\pbl\brand\directive\modify\brand-modify.directive.html" />
     <Content Include="app\pages\pbl\brand\directive\modify\brand-modify.directive.js" />
     <Content Include="app\pages\pbl\brand\brand.controller.js" />
